2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xaml.dll.sources : renamed TypeExtension.cs.

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xaml_test.dll.sources : add XamlLanguageTest.cs.

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xaml.dll.sources
	  System.Xaml_test.dll.sources : more new types.

2010-04-08  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xaml.dll.sources
	  System.Xaml_test.dll.sources : add a lot of new types.

2010-04-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile
	  System.Xaml.dll.sources
	  System.Xaml_test.dll.sources : initial checkin.