@@ -1,0 +1,5 @@
+2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ArrayExtensionTest.cs
+	  StaticExtensionTest.cs
+	  TypeExtensionTest.cs : new tests.
